GIF: fix spacing

--- a/packages/thicket-webapp/src/components/Gif/Gif.css
+++ b/packages/thicket-webapp/src/components/Gif/Gif.css
@@ -30,7 +30,6 @@
   box-shadow: 0px 8px 14px rgba(39, 64, 88, 0.4);
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 }
 
 .gif__inner .editable{
